@@ -1,5 +1,8 @@
  (Format: Year/Month/Day)
 Changes for 1.0rc3:
+*06/07/19:
+   * Preserve order of focused windows on restart (Mark)
+     Workspace.cc Screen.cc FocusControl.cc/hh
 *06/07/16:
    * Fix a bug in Transparent.cc, (Henrik)
     #1362913 Fluxbox core dumps on Solaris 
